--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.4.1",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^19.2.3",
