--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -31,7 +32,11 @@
     "@testing-library/react": "^16.3.2",
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
+    "eslint": "^9.39.2",
     "jsdom": "^28.0.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
